# trendify

./: .gitignore  .tool-versions
backend/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev-requirements.txt  fetch_current_data.py  pyproject.toml  pyrefly.json  pyrightconfig.json  requirements.txt  setup.cfg  test_api.py
backend/api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/api/management/commands/: backfill_historical.py  calculate_metrics.py  cleanup_topics.py  fetch_data.py  fetch_emerging.py  fetch_simple.py  import_posts.py  resolve_entities.py
backend/api/migrations/: 0001_initial.py  0002_entity_entitynode_topicentitylink_and_more.py  0003_add_growth_rate_to_metrics.py  0004_add_new_sources.py
backend/api/services/: __init__.py  embeddings.py  fetchers.py  historical_fetchers.py
backend/backend/: settings.py  urls.py
frontend/: .env.example  .gitignore  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  FilterBar.tsx  MentionBadge.tsx  ProductDashboard.tsx  ProductList.tsx  SourceIndicator.tsx  StatsPanel.tsx  TopicTags.tsx  TrendDashboard.tsx  TrendList.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/store/: filterStore.ts
frontend/src/utils/: formatters.ts
