[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trendify-backend"
version = "0.1.0"
description = "Trendify Django Backend API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django>=6.0.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "dj-database-url>=3.1.0",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.6.0",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-django>=1.4",
    "pylint>=3.0.0",
    "pylint-django>=2.5.5",
    "mypy>=1.8.0",
    "django-stubs>=5.2.9",
    "djangorestframework-stubs>=3.16.8",
    "types-requests>=2.32.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.6.0",
]
celery = [
    "celery>=5.4.0",
    "redis>=5.2.0",
]
images = [
    "Pillow>=11.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/venv/*", "*/.venv/*"]
known_django = ["django"]
known_first_party = ["api", "backend"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "backend.settings"
ignore = ["migrations", "venv", ".venv"]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "invalid-name",
    "duplicate-code",
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "migrations/",
    "venv/",
    ".venv/",
]

[tool.django-stubs]
django_settings_module = "backend.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=api",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["api", "backend"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "manage.py",
    "*/wsgi.py",
    "*/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["F401", "F811"]
